--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -20,8 +20,8 @@
     <gradient
         android:angle="90"
         android:centerColor="@color/colorAccent"
-        android:centerX="20dp"
-        android:centerY="30dp"
+        android:centerX="50"
+        android:centerY="50%"
         android:endColor="@color/color_enabled"
         android:gradientRadius="20dp"
         android:startColor="@color/colorAccent"
