--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -140,6 +140,8 @@
         android:drawableTop="@drawable/icon_menu_info_black_180"
         android:drawableRight="@drawable/icon_menu_info_black_270"
         android:drawableBottom="@drawable/icon_menu_info_black"
+        app:attr_drawable_left_height="50dp"
+        app:attr_drawable_left_width="50dp"
         android:enabled="true"
         android:gravity="center"
         android:padding="10dp"
