--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -178,7 +178,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv1" />
 
-    <com.dailyyoga.ui.widget.AttributeLineLayout
+    <com.dailyyoga.ui.widget.AttributeLinearLayout
         android:id="@+id/ll1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
